<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true">
    <LinearLayout
        android:id="@+id/about_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"/>


        <TextView
            android:id="@+id/disclaimer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer_title"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"/>
        <TextView
            android:id="@+id/disclaimer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

</RelativeLayout>